--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@commitlint/config-conventional": "^8.2.0",
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/bob": "^0.7.0",
+    "@react-native-community/viewpager": "^2.0.1",
     "@release-it/conventional-changelog": "^1.1.0",
     "@types/expo": "^32.0.13",
     "@types/react": "^16.9.5",
