--- a/examplenative/package.json
+++ b/examplenative/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "expo-asset": "^7.0.0",
+    "expo-constants": "^7.0.0",
+    "expo-keep-awake": "~7.0.0",
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-gesture-handler": "~1.3.0",
-    "react-native-ionicons": "^4.6.3",
     "react-native-reanimated": "~1.2.0",
     "scheduler": "^0.16.2"
   },
