--- a/examplenative/package.json
+++ b/examplenative/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.61.2",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-reanimated": "~1.2.0",
+    "react-native-tab-view": "../",
     "scheduler": "^0.16.2"
   },
   "devDependencies": {
